# cuda_exercise

./: .gitignore  CMakeLists.txt  main.cu
benchmark/: CMakeLists.txt  block_all_reduce_benchmark.cu  elementwise_benchmark.cu  histogram_benchmark.cu  ops_benchmark.cu  sigmoid_benchmark.cu
src/: block_all_reduce.cu  elementwise.cu  elementwise.cuh  embedding.cu  hardswish.cu  hgemm.cu  hgemm_async.cu  hgemv.cu  hisogram.cu  layer_norm.cu  mat_transpose.cu  mat_transpose_cute.cu  nms.cu  rms_norm.cu  rope.cu  sgemv.cu  sigmoid.cu  softmax.cu  unary_kernels.cuh  utils.cuh
src/hgemm/: hgemm_mma.cu  hgemm_mma_stage.cu  hgemm_mma_stage_tn.cu
src/sgemm/: sgemm.cu  sgemm_async.cu  sgemm_cublas.cu  sgemm_wmma_tf32_stage.cu
tests/: CMakeLists.txt  block_all_reduce_test.cu  elementwise_test.cu  elu_test.cu  gelu_test.cu  hardshrink_test.cu  hardswish_test.cu  histogram_test.cu  layer_norm_test.cu  nms_test.cu  relu_test.cu  rms_norm_test.cu  rope_test.cu  sigmoid_test.cu  softmax_test.cu  swish_test.cu
